# sim-cli

./: BROCHURE.md  Cargo.toml  README.md  features.toml
.github/workflows/: ci.yml
crates/sim-cli-core/src/: publish_tests.rs
crates/sim-lib-repl/: Cargo.toml
crates/sim-lib-repl/src/: entrypoint.rs  eval.rs
crates/sim-run/: BROCHURE.md  Cargo.toml  README.md
crates/sim-run-core/: Cargo.toml
crates/sim-run-core/src/: args.rs  boot.rs  bootloader.rs  codec_boot_tests.rs  config.rs  config_report_tests.rs  config_tests.rs  handoff.rs  handoff_tests.rs  introspect.rs  introspect_tests.rs  lib.rs  load.rs  load_tests.rs  publish_tests.rs  report.rs  scenario_tests.rs
crates/sim-run-loaders/: Cargo.toml
crates/sim-run-loaders/src/: lib.rs  lisp_source.rs  native.rs
crates/sim-run-loaders/src/native/: codec_proxy_tests.rs
crates/sim-run/src/: loader_boot.rs  main.rs
crates/sim-run/tests/: basic.rs  config_report.rs  glasses.rs  native_dynamic_lisp.rs  native_dynamic_repl.rs  wasm_loader.rs
crates/sim-view-tty/: Cargo.toml
crates/sim-view-tty/src/: caps.rs  lib.rs  render.rs  tests.rs
docs/diagrams/src/: README.md
docs/humans/: README.md
recipes/: book.toml
recipes/publish-readiness/package-list/: purpose.md
xtask/src/: main.rs
