[workspace]
resolver = "3"
members = [
  "crates/sim-cli-core",
  "crates/sim-cli-loaders",
  "crates/sim-view-tty",
  "xtask",
]
# The CLI stack -- sim-run (crates/sim-cli) and sim-lib-repl -- depends on the `sim`
# facade, which is deferred (not yet on crates.io), so it cannot build in a
# standalone checkout. Exclude it from this workspace until the facade is published;
# the maintainer meta-workspace still builds it (via repos.toml source_paths), where
# the facade resolves by path. Re-add these members when the facade publishes.
exclude = [
  "crates/sim-cli",
  "crates/sim-lib-repl",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-cli"
homepage = "https://github.com/sim-nest/sim-cli"

[workspace.lints.rust]
unsafe_code = "forbid"
